--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html{
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,60 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: brown;
+  color: aliceblue;
+  max-width: 700px;
+  min-width: 300px;
+  margin: 5px 5px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border: 5px solid black;
+  border-radius: 20%;
+  padding: 20px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.timers{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+.arrows{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 24px;
+}
+
+#time-left{
+  font-size: 60px;
+  margin-top: 10px;
+}
+
+#clock-container{
+  border: 10px solid black;
+  border-radius: 20%;
+  margin: 40px;
+}
+
+#controls{
+  display: flex;
+  justify-content: space-evenly;
+  margin: o auto;
+  font-size: 30px;
+}
+
+.headers{
+  max-width: 140px;
 }
